# epp-sla-anomaly-detection-dashboard

./: .dockerignore  .gitignore  README.md  pyproject.toml
.github/workflows/: docker-build-push.yml
docker/: ui.Dockerfile
src/dashboard/: app.py  settings.py  theme.py
src/dashboard/components/: header.py  inference_selector.py
src/dashboard/components/controls/: compare_controls.py  mlflow_controls.py  realtime_controls.py  single_controls.py
src/dashboard/pages/: 1_Single_Model.py  2_Compare_Model.py  3_MLflow_Metrics.py  CompareModel.py  MLflow_Metrics.py  RealtimeSimulation.py  SingleModel.py
src/dashboard/utils/: api_client.py  dataframe_utils.py  mlflow_client.py
